deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: weatherforcast-service
spec:
  selector:
    app: weatherforcast-pod
  ports:
  - port: 3000
    targetPort: 5000
  type: LoadBalancer
  externalIPs:
  - 194.233.73.42
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherforcast-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: weatherforcast-pod
  template:
    metadata:
      labels:
        app: weatherforcast-pod
    spec:
      containers:
      - name: weatherforcast-container
        image: weatherforecast:tagVersion
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 5000
