service.yml
apiVersion: v1
kind: Service
metadata:
  name: weatherforcast-service
spec:
  selector:
    app: weatherforcast-pod1
  ports:
  - port: 3000
    targetPort: 5000
  type: LoadBalancer
  externalIPs:
  - 194.233.73.42
